--- a/index.html
+++ b/index.html
@@ -3,20 +3,27 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Документ без названия</title>
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
+
+
+
 <body>
   <header class="header">
 
     <div class="header_top">             <!-- Над шапкой -->
       <div class="container">
-        <a href="#">8 (911) 723-54-28</a>
-        <a href="#">strange3355@mail.ru</a>
-        <a href="#">Задать вопрос</a>
+        <a class="header_fon" href="tel:+79117235428">+7 (911) 723-54-28</a>
+        <a class="header_mail" href="#">strange3355@mail.ru</a>
+        <a class="header_qest" href="#">Задать вопрос</a>
       </div>
     </div>
 
+
     <div class="header_content">       <!-- Содержание шапки  Как мы это делаем. Вдохновление. Позиция -->
-      <div class="heder_logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
+      <div class="container">
+      <div class="heder_logo"><a href="#"><img src="img/log o.png" alt=""></a></div>
       <nav class="menu">              <!-- Меню шапки -->
         <ul>
           <li><a href="#">Об NO WASTE</a></li>
@@ -26,8 +33,8 @@
           <li><a href="#">Законодательство</a></li>
         </ul>
       </nav>
+      </div>
     </div>
-
 
 
 
