--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Документ без названия</title>
+<link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&display=swap&subset=cyrillic" rel="stylesheet">
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,31 +15,35 @@
 
     <div class="header_top">             <!-- Над шапкой -->
       <div class="container">
-        <a class="header_fon" href="tel:+79117235428">+7 (911) 723-54-28</a>
-        <a class="header_mail" href="#">strange3355@mail.ru</a>
-        <a class="header_qest" href="#">Задать вопрос</a>
+        <div class="header_contacts">
+          <a class="header_fon" href="tel:+79117235428">+7 (911) 723 54 28</a>
+          <a class="header_mail" href="#">strange3355@mail.ru</a>
+          <a class="header_qest" href="#">Задать вопрос</a>
+        </div>
       </div>
     </div>
+
 
 
     <div class="header_content">       <!-- Содержание шапки  Как мы это делаем. Вдохновление. Позиция -->
       <div class="container">
-      <div class="heder_logo"><a href="#"><img src="img/log o.png" alt=""></a></div>
-      <nav class="menu">              <!-- Меню шапки -->
-        <ul>
-          <li><a href="#">Об NO WASTE</a></li>
-          <li><a href="#">Что мы делаем</a></li>
-          <li><a href="#">Команда</a></li>
-          <li><a href="#">СМИ</a></li>
-          <li><a href="#">Законодательство</a></li>
-        </ul>
-      </nav>
+        <div class="header_content-inner">
+          <div class="heder_logo"><a href="#"><img src="img/log o.png" alt=""></a></div>
+          <nav class="menu">              <!-- Меню шапки -->
+            <ul>
+              <li><a href="#">ГЛАВНАЯ</a></li>
+              <li><a href="#">Об NO WASTE</a></li>
+              <li><a href="#">Что мы делаем</a></li>
+              <li><a href="#">Команда</a></li>
+              <li><a href="#">СМИ</a></li>
+              <li><a href="#">Законодательство</a></li>
+            </ul>
+          </nav>
       </div>
     </div>
+  </div>
 
-
-
-  </header>
+</header>
 
 </body>
 </html>
