--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Документ без названия</title>
 <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&display=swap&subset=cyrillic" rel="stylesheet">
 <link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -23,7 +24,7 @@
       </div>
     </div>
 
-
+/* 54.30 */
 
     <div class="header_content">       <!-- Содержание шапки  Как мы это делаем. Вдохновление. Позиция -->
       <div class="container">
