--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header_top">             <!-- Над шапкой -->
       <div class="container">
         <div class="header_contacts">
-          <a class="header_fon" href="tel:+79117235428">+7 (911) 723 54 28</a>
+          <a class="header_phone" href="tel:+79117235428">+7 (911) 723 54 28</a>
           <a class="header_mail" href="#">strange3355@mail.ru</a>
           <a class="header_qest" href="#">Задать вопрос</a>
         </div>
