--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+<link rel="stylesheet" href="css/slick.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -33,7 +34,6 @@
     <div class="header_content">       <!-- Содержание шапки  Как мы это делаем. Вдохновление. Позиция -->
       <div class="container">
         <div class="header_content-inner">
-          <div class="heder_logo"><a href="#"><img src="img/log o.png" alt=""></a></div>
           <nav class="menu">              <!-- Меню шапки -->
             <ul>
               <li><a href="#">ГЛАВНАЯ</a></li>
@@ -55,8 +55,8 @@
 
 <!--*********** ШАПКА ФОН     ШАПКА ФОН       ШАПКА ФОН     ШАПКА ФОН***********    -->
 <section class="slider">
-  <div class="heder_logo"><a href="#"><img src="img/logo.png" weight=350px; height=300px; alt=""></a></div>
   <div class="container">
+   <div id="photo"><img src="img/logo.png" weight=600px; height="500px;"></div>
     <div class="slider_inner">
       <div class="slider_item">
         <div class="slider_title">
@@ -119,6 +119,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/jquery.fancybox.min.js"></script>
+<script src="js/slick.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
