--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-<link rel="stylesheet" href="css/slick.css">
+<!-- <link rel="stylesheet" href="css/sl ick.css"> -->
 <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -57,57 +57,77 @@
 <section class="slider">
   <div class="container">
    <div id="photo"><img src="img/logo.png" weight=600px; height="500px;"></div>
-    <div class="slider_inner">
-      <div class="slider_item">
-        <div class="slider_title">
-          Комплексное закрытие предприятия
-        </div>
+  </div>
+</section>
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
-        <div class="slider_text">
-          Полное прекращение существования юридического лица с сохранением легальности всей предыдущей деятельности.
+<!--***********ПОД ШАПКА ФОН    ПОД ШАПКА ФОН      ПОД ШАПКА ФОН    ПОД ШАПКА ФОН***********    -->
+<section class="about">
+  <div class="container">
+    <div class="about_top">
+      <div class="about_title-box">
+        <div class="about_title">
+          Если вы зашли на наш сайт:
         </div>
-        <div class="slider_btn">
-          Оформить заявку
+        <div class="about_text">
+          <ul>
+            <li>  Значит вам небезразличны вопросы экологии, здоровья, сохранения нашей с вами среды обитания;</li>
+            <li>  Значит вы задумались о том, что вы можете сделать для улучшения экологической обстановки в нашей стране;</li>
+            <li>  Значит вы беспокоитесь о своем будущем и будущем своих детей.</li>
+          </ul>
         </div>
-
       </div>
-      <div class="slider_item">
-        <div class="slider_title">
-          Комплексное закрытие предприятия
-        </div>
-
-        <div class="slider_text">
-          Полное прекращение существования юридического лица с сохранением легальности всей предыдущей деятельности.
-        </div>
-        <div class="slider_btn">
-          Оформить заявку
-        </div>
-
+      <div class="about_waste">
+      <img src="img/waste_icon.png" alt="">
+      <a  href="#" class="about_btn">
+        Что куда сдавать
+      </a>
       </div>
-      <div class="slider_item">
-        <div class="slider_title">
-          Комплексное закрытие предприятия
+    </div>
+    <div class="about_items">
+      <div class="about_item">
+        <img src="img/about-1.png" alt="">
+        <div class="about_item-title">
+          Как мы это делаем
         </div>
-
-        <div class="slider_text">
-          Полное прекращение существования юридического лица с сохранением легальности всей предыдущей деятельности.
+        <div class="about_item-text">
+          Продвижение раздельного сбора и переработки отходов в регионах, а также сокращение неперерабатываемых отходов, просвещение широких слоев населения о важности участия общественности в решении “мусорной” проблемы.
         </div>
-        <div class="slider_btn">
-          Оформить заявку
+        <div class="about_item-btn">
+          <a href="#">Подробнее</a>
         </div>
-
+      </div>
+      <div class="about_item">
+        <img src="img/about-2.png" alt="">
+        <div class="about_item-title">
+          Вдохновление
+        </div>
+        <div class="about_item-text">
+          Польза раздельного сбора мусора очевидна. Такой подход уменьшает степень загрязнения воды, воздуха и земли. Вторичная переработка снижает количество потребляемой воды и величину городских свалок, экономит природные ресурсы Земли.
+        </div>
+        <div class="about_item-btn">
+          <a href="#">Подробнее</a>
+        </div>
+      </div>
+      <div class="about_item">
+        <img src="img/about-3.png" alt="">
+        <div class="about_item-title">
+          Позиция
+        </div>
+        <div class="about_item-text">
+          Общественные экологические организации России объединили свои усилия и создали Альянс против сжигания и за переработку отходов на нижеизложенных принципах для информирования населения России об опасностях, которые несет применение мусоросжигательных технологий.
+        </div>
+        <div class="about_item-btn">
+          <a href="#">Подробнее</a>
+        </div>
       </div>
     </div>
   </div>
 </section>
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-
-
-
-
-
-
+#6DBB39
 
 
 
@@ -119,7 +139,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/jquery.fancybox.min.js"></script>
-<script src="js/slick.min.js"></script>
+<!-- <script src="js/slick.min.js"></script> -->
 <script src="js/main.js"></script>
 </body>
 </html>
