--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-
-
 <!--*********** МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ       ***********    -->
-    <div class="header_content">       <!-- Содержание шапки  Как мы это делаем. Вдохновление. Позиция -->
+    <div class="header_content">  
       <div class="container">
         <div class="header_content-inner">
           <nav class="menu">              <!-- Меню шапки -->
@@ -51,8 +49,6 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-
-
 <!--*********** ШАПКА ФОН     ШАПКА ФОН       ШАПКА ФОН     ШАПКА ФОН***********    -->
 <section class="slider">
   <div class="container">
@@ -61,15 +57,16 @@
 </section>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
+
 <!--***********ПОД ШАПКА ФОН    ПОД ШАПКА ФОН      ПОД ШАПКА ФОН    ПОД ШАПКА ФОН***********    -->
-<section class="about">
+<section class="services">
   <div class="container">
-    <div class="about_top">
-      <div class="about_title-box">
-        <div class="about_title">
+    <div class="services_top">
+      <div class="services_title-box">
+        <div class="services_title">
           Если вы зашли на наш сайт:
         </div>
-        <div class="about_text">
+        <div class="services_text">
           <ul>
             <li>  Значит вам небезразличны вопросы экологии, здоровья, сохранения нашей с вами среды обитания;</li>
             <li>  Значит вы задумались о том, что вы можете сделать для улучшения экологической обстановки в нашей стране;</li>
@@ -77,47 +74,47 @@
           </ul>
         </div>
       </div>
-      <div class="about_waste">
+      <div class="services_waste">
       <img src="img/waste_icon.png" alt="">
-      <a  href="#" class="about_btn">
+      <a  href="#" class="services_btn">
         Что куда сдавать
       </a>
       </div>
     </div>
-    <div class="about_items">
-      <div class="about_item">
+    <div class="services_items">
+      <div class="services_item">
         <img src="img/about-1.png" alt="">
-        <div class="about_item-title">
+        <div class="services_item-title">
           Как мы это делаем
         </div>
-        <div class="about_item-text">
-          Продвижение раздельного сбора и переработки отходов в регионах, а также сокращение неперерабатываемых отходов, просвещение широких слоев населения о важности участия общественности в решении “мусорной” проблемы. 
+        <div class="services_item-text">
+          Продвижение раздельного сбора и переработки отходов в регионах, а также сокращение неперерабатываемых отходов, просвещение широких слоев населения о важности участия общественности в решении “мусорной” проблемы.
         </div>
-        <div class="about_item-btn">
+        <div class="services_item-btn">
           <a href="#">Подробнее</a>
         </div>
       </div>
-      <div class="about_item">
+      <div class="services_item">
         <img src="img/about-2.png" alt="">
-        <div class="about_item-title">
+        <div class="services_item-title">
           Вдохновление
         </div>
-        <div class="about_item-text">
+        <div class="services_item-text">
           Польза раздельного сбора мусора очевидна. Такой подход уменьшает степень загрязнения воды, воздуха и земли. Вторичная переработка снижает количество потребляемой воды и величину городских свалок, экономит природные ресурсы Земли.
         </div>
-        <div class="about_item-btn">
+        <div class="services_item-btn">
           <a href="#">Подробнее</a>
         </div>
       </div>
-      <div class="about_item">
+      <div class="services_item">
         <img src="img/about-3.png" alt="">
-        <div class="about_item-title">
+        <div class="services_item-title">
           Позиция
         </div>
-        <div class="about_item-text">
+        <div class="services_item-text">
           Общественные экологические организации России объединили свои усилия и создали Альянс против сжигания и за переработку отходов на нижеизложенных принципах для информирования населения России об опасностях, которые несет применение мусоросжигательных технологий.
         </div>
-        <div class="about_item-btn">
+        <div class="services_item-btn">
           <a href="#">Подробнее</a>
         </div>
       </div>
@@ -127,10 +124,22 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
+<!--*********** О КОМПАНИИ       О КОМПАНИИ         О КОМПАНИИ***********    -->
+<section class="about">
+
+</section>
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
+
+
+
+
+
+
+
+
+
+
 #6DBB39
-
-
-
 
 <div id="animatedModal" class="animated-modal">
    <h2>Hello! 1.24</h2>
