--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 <!--*********** МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ       ***********    -->
-    <div class="header_content">  
+    <div class="header_content">
       <div class="container">
         <div class="header_content-inner">
           <nav class="menu">              <!-- Меню шапки -->
@@ -126,7 +126,18 @@
 
 <!--*********** О КОМПАНИИ       О КОМПАНИИ         О КОМПАНИИ***********    -->
 <section class="about">
+  <div class="container">
+    <div class="about_inner">
+      <div class="about_title">
+      О движении
+    </div>
+      <div class="about_text">
+        <p>Мы — большое сообщество людей, которое бережно относится к ресурсам планеты и выступает за новую систему обращения с отходами. Мы основываемся на принципах 3R — reduce, reuse, recycle (сокращай, используй повторно, перерабатывай). Мы — некоммерческая негосударственная ассоциация в сфере экологии и защиты окружающей среды «РазДельный Сбор».</p>
 
+        <p>Ассоциация появилась в Санкт-Петербурге в ноябре 2011 года, когда наши активисты провели первую акцию по сбору вторсырья. Сегодня штабы движения работают от Сочи до Владивостока — ищите штаб рядом с вами в географии движения. Московское отделение открылось в 2014 году.</p>
+      </div>
+    </div>
+  </div>
 </section>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
