--- a/index.html
+++ b/index.html
@@ -142,7 +142,63 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-
+<!--*********** ВОПРОС         ВОПРОС         ВОПРОС         ВОПРОС         ***********    -->
+<section class="form">
+  <div class="container">
+    <div class="form_inner">
+      <div class="form_contenr">
+        <div class="form_title-box">
+          <div class="form_title">
+            Обратная связь
+          </div>
+          <div class="form_text">
+            <p>(Задать вопрос по теме сообщества, узнать про раздельный сбор, внести предложение или замечание и т.д.)</p>
+          </div>
+        </div>
+        <div class="form_box">
+          <form class="" action="index.html" method="post">
+            <div class="form_box-inner">
+              <div class="form_box-left">
+                <label>
+                  E-mail
+                  <input type="text" name="" value="">
+                </label>
+                <label>
+                  <p>Способ обратной связи </p>
+                  <p>(VK, Instagram, Facebook, WhatsApp)</p>
+                  <input type="text" name="" value="">
+                </label>
+                <label>
+                  Ф.И.О.
+                  <input type="text" name="" value="">
+                </label>
+                <label>Тема вопроса
+                  <select class="" name="">
+                    <option value="">-------</option>
+                    <option value="">Вопрос</option>
+                    <option value="">Предложение</option>
+                    <option value="">Претензия</option>
+                    <option value="">Как собирать</option>
+                    <option value="">Место сбора</option>
+                    <option value="">Другое</option>
+                  </select>
+                </label>
+              </div>
+              <div class="form_box-right">
+                <label>
+                  Сообщение
+                  </label>
+                  <textarea>Добрый день!...</textarea>
+                <button type="submit">Отправить</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
 
