--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Документ без названия</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatable"  content="ie=edge">
+  <title>Документ без названия</title>
 <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&display=swap&subset=cyrillic" rel="stylesheet">
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/jquery.fancybox.min.css">
 <!-- <link rel="stylesheet" href="css/sl ick.css"> -->
+<link rel="stylesheet" href="/css/jquery.formstyler.css">
 <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 
@@ -189,7 +193,7 @@
                   Сообщение
                   </label>
                   <textarea>Добрый день!...</textarea>
-                <button type="submit">Отправить</button>
+                <input class="to_send" type="image" src="img/send.png" width="50px" height="">
               </div>
             </div>
           </form>
@@ -212,6 +216,7 @@
    <h2>Hello! 1.24</h2>
    <p>This is animated content! Cool, right? 1920х497</p>
  </div>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/jquery.fancybox.min.js"></script>
