--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-<!--*********** ВОПРОС         ВОПРОС         ВОПРОС         ВОПРОС         ***********    -->
+<!--*********** ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ       ОБРАТНАЯ СВЯЗТЬ         ***********    -->
 <section class="form">
   <div class="container">
     <div class="form_inner">
@@ -204,7 +204,39 @@
 </section>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
+<!--*********** МЫ ПРОТИВ         МЫ ПРОТИВ         МЫ ПРОТИВ       МЫ ПРОТИВ         ***********    -->
+<section class="advantages">
+  <div class="container">
+    <div class="adv_items">
+      <div class="adv_item">
+        <div class="adv_title">
+          Вырубка лесов
+        </div>
+        <div class="adv_text">
+          Одна из самых распространенных проблем экологии. С уничтожением деревьев в системе биогеоценоза нарушается экологическое равновесие.
+        </div>
+        </div>
+        <div class="adv_item">
+        <div class="adv_title">
+          Мусорозжигание
+        </div>
+        <div class="adv_text">
+          При сжигании отходов в воздух попадает много крайне опасных веществ, таких как диоксины и тяжелые металлы. Действие диоксинов на организм человека сравнимо с действием ВИЧ.
+        </div>
+        </div>
+        <div class="adv_item">
+        <div class="adv_title">
+          Загрязнение пресных вод
+        </div>
+        <div class="adv_text">
+          В мире уже сейчас наблюдается нехватка пресной воды преимущественно, в регионах, находящихся близко к экватору. Загрязнение водоёмов лишь усугубляет положение вещей.
+        </div>
+      </div>
+    </div>
 
+  </div>
+</section>
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
 
