--- a/index.html
+++ b/index.html
@@ -209,22 +209,31 @@
   <div class="container">
     <div class="adv_items">
       <div class="adv_item">
+        <div class="hhh">
+          <img src="img/redkrest.png" alt="" height="40px" width="">
+        </div>
         <div class="adv_title">
           Вырубка лесов
         </div>
         <div class="adv_text">
           Одна из самых распространенных проблем экологии. С уничтожением деревьев в системе биогеоценоза нарушается экологическое равновесие.
         </div>
+      </div>
+      <div class="adv_item">
+        <div class="hhh">
+          <img src="img/redkrest.png" alt="" height="40px" width="">
         </div>
-        <div class="adv_item">
         <div class="adv_title">
           Мусорозжигание
         </div>
         <div class="adv_text">
           При сжигании отходов в воздух попадает много крайне опасных веществ, таких как диоксины и тяжелые металлы. Действие диоксинов на организм человека сравнимо с действием ВИЧ.
         </div>
-        </div>
-        <div class="adv_item">
+      </div>
+      <div class="adv_item">
+          <div class="hhh">
+            <img src="img/redkrest.png" alt="" height="40px" width="">
+          </div>
         <div class="adv_title">
           Загрязнение пресных вод
         </div>
@@ -233,7 +242,6 @@
         </div>
       </div>
     </div>
-
   </div>
 </section>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
