--- a/index.html
+++ b/index.html
@@ -247,10 +247,46 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
+<!--*********** НОВОСТИ            НОВОСТИ            НОВОСТИ            НОВОСТИ             ***********    -->
+<section class="news">
+  <div class="container">
+    <div class="news_top">
+      <div class="news_title-box">
+        <div class="news_title">
+          Новости:
+        </div>
+        <div class="news_text">
+          <ul>
+            <li>  Значит вам небезразличны вопросы экологии, здоровья, сохранения нашей с вами среды обитания;</li>
+            <li>  Значит вы задумались о том, что вы можете сделать для улучшения экологической обстановки в нашей стране;</li>
+            <li>  Значит вы беспокоитесь о своем будущем и будущем своих детей.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="news_waste">
+      <img src="img/news.png" alt="">
+      <a  href="#" class="news_btn">
+        Открыть все новости
+      </a>
+      </div>
+    </div>
+
+  </div>
+</section>
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
 
-#6DBB39
+
+
+
+
+
+
+
+
+
+4.34.18
 
 <div id="animatedModal" class="animated-modal">
    <h2>Hello! 1.24</h2>
