--- a/index.html
+++ b/index.html
@@ -256,11 +256,7 @@
           Новости:
         </div>
         <div class="news_text">
-          <ul>
-            <li>  Значит вам небезразличны вопросы экологии, здоровья, сохранения нашей с вами среды обитания;</li>
-            <li>  Значит вы задумались о том, что вы можете сделать для улучшения экологической обстановки в нашей стране;</li>
-            <li>  Значит вы беспокоитесь о своем будущем и будущем своих детей.</li>
-          </ul>
+          <p>Выбросы мусоросжигательных заводов очень опасны для здоровья. Из-за того, что в печь попадает несортированный мусор: пластиковые упаковки, батарейки, стройматериалы, органические отходы и т.д. - выбросы МСЗ содержат диоксины. Это одни из самых ядовитых веществ на планете и сильнейшие канцерогены.</p>
         </div>
       </div>
       <div class="news_waste">
@@ -270,7 +266,36 @@
       </a>
       </div>
     </div>
+    <div class="news_inner">
+      <div class="news_blog">
+        <div class="news_img">
+          <img src="img/news-1.jpg" alt="">
+          <div class="news_date">  </div>
+            17.02
+          </div>
+          <div class="news_blog-title">
+            Обращение с отходами в Цюрихе
+          </div>
+          <div class="news_blog-title">
+            Швейцарии успешно удается поддерживать образ чистой и ухоженной страны, где все проблемы рационального природопользования и экологии давно решены. Так ли это?
+          </div>
+        </div>
 
+        <div class="news_blog">
+          <div class="news_img">
+            <img src="img/news-2.jpg" alt="">
+            <div class="news_date">  </div>
+              17.02
+            </div>
+            <div class="news_blog-title">
+              Завод по переработке тетрапака
+            </div>
+            <div class="news_blog-title">
+              Как перерабатывают полиэтилен и алюминий из многослойной упаковки Tetra Pak и ее аналогов на заводе “Инвестал” в г. Тамбов
+            </div>
+          </div>
+      </div>
+    </div>
   </div>
 </section>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
