--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
           Новости:
         </div>
         <div class="news_text">
-          <p>Выбросы мусоросжигательных заводов очень опасны для здоровья. Из-за того, что в печь попадает несортированный мусор: пластиковые упаковки, батарейки, стройматериалы, органические отходы и т.д. - выбросы МСЗ содержат диоксины. Это одни из самых ядовитых веществ на планете и сильнейшие канцерогены.</p>
+          <p>Движения стимулирует появление и развитие новой системы обращения с отходами в России, основанной на принципах 3R (reduce, reuse, recycle – уменьшай, используй повторно, перерабатывай), и формирует осознанное, рациональное отношение людей к природным ресурсам.</p>
+
         </div>
       </div>
       <div class="news_waste">
@@ -267,6 +268,21 @@
       </div>
     </div>
     <div class="news_inner">
+      <div class="news_slider">
+        <div class="news_slider-inner">
+            <div class="news_slider-item">
+              <div class="news_slider-title">
+                Мусорозжигание
+              </div>
+              <div class="news_slider-text">
+                  <p>Выбросы мусоросжигательных заводов очень опасны для здоровья. Из-за того, что в печь попадает несортированный мусор: пластиковые упаковки, батарейки, стройматериалы, органические отходы и т.д. - выбросы МСЗ содержат диоксины. Это одни из самых ядовитых веществ на планете и сильнейшие канцерогены.</p>
+              </div>
+              <div class="news_slider-author">
+
+              </div>
+            </div>
+        </div>
+      </div>
       <div class="news_blog">
         <div class="news_img">
           <img src="img/news-1.jpg" alt="">
