--- a/index.html
+++ b/index.html
@@ -283,35 +283,32 @@
             </div>
         </div>
       </div>
-      <div class="news_blog">
+      <a href="#" class="news_blog">
         <div class="news_img">
-          <img src="img/news-1.jpg" alt="">
-          <div class="news_date">  </div>
-            17.02
+          <img src="img/news-2.jpg" alt="">
+          <div class="news_date">   20.02  </div>
           </div>
           <div class="news_blog-title">
             Обращение с отходами в Цюрихе
           </div>
-          <div class="news_blog-title">
+          <div class="news_blog-text">
             Швейцарии успешно удается поддерживать образ чистой и ухоженной страны, где все проблемы рационального природопользования и экологии давно решены. Так ли это?
           </div>
-        </div>
+        </a>
 
-        <div class="news_blog">
+        <a href="#" class="news_blog">
           <div class="news_img">
-            <img src="img/news-2.jpg" alt="">
-            <div class="news_date">  </div>
-              17.02
+            <img src="img/news-1.jpg" alt="">
+            <div class="news_date">  17.02  </div>
             </div>
             <div class="news_blog-title">
               Завод по переработке тетрапака
             </div>
-            <div class="news_blog-title">
+            <div class="news_blog-text">
               Как перерабатывают полиэтилен и алюминий из многослойной упаковки Tetra Pak и ее аналогов на заводе “Инвестал” в г. Тамбов
             </div>
-          </div>
+          </a>
       </div>
-    </div>
   </div>
 </section>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
