--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         </div>
         <div class="services_text">
           <ul>
-            <li>  Значит вам небезразличны вопросы экологии, здоровья, сохранения нашей с вами среды обитания;</li>
-            <li>  Значит вы задумались о том, что вы можете сделать для улучшения экологической обстановки в нашей стране;</li>
-            <li>  Значит вы беспокоитесь о своем будущем и будущем своих детей.</li>
+            <li class="li1">  Значит вам небезразличны вопросы экологии, здоровья, сохранения нашей с вами среды обитания;</li>
+            <li class="li1">  Значит вы задумались о том, что вы можете сделать для улучшения экологической обстановки в нашей стране;</li>
+            <li class="li1">  Значит вы беспокоитесь о своем будущем и будущем своих детей.</li>
           </ul>
         </div>
       </div>
@@ -311,6 +311,39 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
+
+
+<footer class="footer">
+  <div class="footer_contant">
+    <div class="container">
+      <div class="footer_info">
+        <div class="footer_title">
+          Движение "NO WASTE"
+        </div>
+        <div class="footer_text">
+          Деятельность движения стимулирует появление и развитие новой системы обращения с отходами в России, основанной на принципах 3R (reduce, reuse, recycle – уменьшай, используй повторно, перерабатывай), и формирует осознанное, рациональное отношение людей к природным ресурсам.
+        </div>
+          <a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="header_qest" href="#">Задать вопрос</a>
+          <ul class="footer_list">
+            <li><a href="#">+7 (911) 723 54 28</a></li>
+            <li><a href="#">strange3355@mail.ru</a></li>
+            <li><a href="#">СПб, Моравский 5к3</a></li>
+          </ul>
+      </div>
+      <div class="footer_map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2004.6684115431963!2d30.419893016066332!3d59.83803898183975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962583a87582ff%3A0xa2c07bf85d10363b!2z0JzQvtGA0LDQstGB0LrQuNC5INC_0LXRgC4sIDUsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTIyODk!5e0!3m2!1sru!2sru!4v1576430313828!5m2!1sru!2sru" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+
+      </div>
+    </div>
+  </div>
+  <div class="footer_copy">
+    <div class="container">
+      <div class="copy_text">
+      2019 Developed by Alexander Nazarov. Все права защищены.
+      </div>
+    </div>
+  </div>
+</footer>
 
 
 
